# regime-aware-strategy-allocator-public

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
allocator/: __init__.py  adapters.py  backtest.py  engine.py  estimator.py  optimizer.py  runner.py  schemas.py  stress.py
live/: bridge.py  ecosystem.config.js  telegram.py
tests/: test_adapters.py  test_backtest.py  test_optimizer.py  test_runner.py  test_schemas.py
